--- a/app/src/main/res/layout/insertar.xml
+++ b/app/src/main/res/layout/insertar.xml
@@ -59,7 +59,7 @@
             android:layout_height="wrap_content"/>
 
         <Button
-            android:id="@+id/insertar"
+            android:id="@+id/insertarVehiculo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
